fix rules panel being too wide on mobile

--- a/static2/css/demonlist.v2.1.css
+++ b/static2/css/demonlist.v2.1.css
@@ -51,7 +51,6 @@ tr:nth-child(even) {
   #rules,
   #discord {
     order: -1;
-    width: 100%;
   }
 
   #discord {
